Fix: Configure CAP to use test.db SQLite database

--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
             "db": {
                 "kind": "sqlite",
                 "credentials": {
-                    "url": "db.sqlite"
+                    "url": "test.db"
+                },
+                "[production]": {
+                    "credentials": {
+                        "url": "test.db"
+                    }
                 }
             },
             "auth": {
