Fix: Update VFA and VOA entities to match 12-column CSV structure and deploy to db.sqlite

--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
             "db": {
                 "kind": "sqlite",
                 "credentials": {
-                    "url": "test.db"
+                    "url": "db.sqlite"
                 },
                 "[production]": {
                     "credentials": {
-                        "url": "test.db"
+                        "url": "db.sqlite"
                     }
                 }
             },
