Fix: Add missing entitySet property to Fulfillment apps manifests
- Added entitySet property to product-groups List Report settings
- Added entitySet property to delivery-notes List Report settings
- Added entitySet property to products List Report settings
- Resolves FilterBar undefined entityTypePath error in all three apps

--- a/app/product-groups/webapp/manifest.json
+++ b/app/product-groups/webapp/manifest.json
@@ -32,6 +32,7 @@
       "minUI5Version": "1.120.0",
       "libs": {
         "sap.fe.templates": {},
+        "sap.f": {},
         "sap.m": {},
         "sap.ui.core": {},
         "sap.ushell": {}
@@ -87,6 +88,7 @@
           "options": {
             "settings": {
               "contextPath": "/PGA_ProductGroup",
+              "entitySet": "PGA_ProductGroup",
               "variantManagement": "Page",
               "initialLoad": true,
               "navigation": {
