--- a/app/delivery-notes/webapp/manifest.json
+++ b/app/delivery-notes/webapp/manifest.json
@@ -32,6 +32,7 @@
       "minUI5Version": "1.120.0",
       "libs": {
         "sap.fe.templates": {},
+        "sap.f": {},
         "sap.m": {},
         "sap.ui.core": {},
         "sap.ushell": {}
@@ -87,6 +88,7 @@
           "options": {
             "settings": {
               "contextPath": "/GUA_DeliveryNote",
+              "entitySet": "GUA_DeliveryNote",
               "variantManagement": "Page",
               "initialLoad": true,
               "navigation": {
