Add migration tools and documentation
  - Migration script with CAP backend preservation
  - Dry-run preview script for safe testing
  - Comprehensive step-by-step migration plan
  - Updated .gitignore for migration artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,9 @@ coverage/
 # Windows
 ehthumbs.db
 Desktop.ini
+
+# Migration artifacts
+migration-preview/
+backup-package-json/
+cds_cap_backup_*.tar.gz
+*.migration.log
