--- a/app/financial-statements/package.json
+++ b/app/financial-statements/package.json
@@ -3,9 +3,25 @@
   "version": "0.1.0",
   "description": "Financial Statements Analysis - Income Statement & Balance Sheet",
   "scripts": {
-    "start": "fiori run --open \"test/flpSandbox.html?sap-ui-xx-viewCache=false#financialstatements-display\""
+    "start": "fiori run --open \"test/flpSandbox.html?sap-ui-xx-viewCache=false#financialstatements-display\"",
+    "test:unit": "karma start --single-run",
+    "test:unit:watch": "karma start",
+    "test:integration": "wdio wdio.conf.js",
+    "test:opa": "open webapp/test/integration/opaTests.qunit.html",
+    "test": "npm run test:unit && npm run test:integration"
   },
   "devDependencies": {
-    "@sap/ux-specification": "^1.108.28"
+    "@sap/ux-specification": "^1.108.28",
+    "@ui5/cli": "^3.0.0",
+    "karma": "^6.4.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.2.0",
+    "karma-ui5": "^3.0.0",
+    "@wdio/cli": "^8.0.0",
+    "@wdio/local-runner": "^8.0.0",
+    "@wdio/mocha-framework": "^8.0.0",
+    "@wdio/spec-reporter": "^8.0.0",
+    "chromedriver": "^119.0.0",
+    "wdio-chromedriver-service": "^8.0.0"
   }
 }
